--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -149,7 +149,7 @@ micro-climate modelling, urban vegetation, VTUF-3D, human thermal comfort
 \nomenclature{$\sigma$}{Stefan-Boltzmann constant (=5.67 $\times$ 10$^{-8}$W m$^{-2}$K$^{-4}$)} 
 \nomenclature{$\theta$}{solar zenith angle} 
 \nomenclature{$A$}{surface area of a sphere of diameter D, of value 0.15m, (=$\pi 0.15^{2}$m$^{2}$)} 
-\nomenclature{$d$}{index of agreement (0 <= d <= 1)} 
+\nomenclature{$d$}{index of agreement (0 \textless= d \textless= 1)} 
 \nomenclature{$f_{dir}$}{fraction of the total horizontal solar irradiance, $S$, due to the direct beam of the sun}
 \nomenclature{$h$}{convective heat transfer coefficient (W m$^{-2}$K$^{-1}$)} 
 \nomenclature{$h_{i}$}{heat transfer coefficient (W m$^{-2}$K$^{-1}$)} 
@@ -185,7 +185,8 @@ micro-climate modelling, urban vegetation, VTUF-3D, human thermal comfort
 Urban areas are facing a growing number of challenges. Cities are now home to the majority of the world's population and trends will result in further growth \citep{UNDESA2015,WHO2016}. To accommodate increasing urban populations, cities are expanding \citep{Seto2011} and densifying \citep{Byrne2016,Ruth2016,DSE2002}, leading to loss of urban green spaces \citep{Hamin2009,Coutts2007}. In these increasingly urbanised areas, the removal of vegetation, combined with rapid stormwater removal and possibly restricted irrigation during drought conditions, can leave urban landscapes water starved. Urban development that does not consider the implications on urban climate, risks intensifying urban heating and compromising the thermal comfort of city residents. In addition, climate trends point towards increasing average and extreme temperatures \citep{Alexander2009,IPCC2013a}. This is concerning given the growing understanding of the impacts on human health of extreme temperatures \citep{Katsouyanni1993,Nicholls2008,Loughnan2010} and demographics that are shifting toward a more elderly population \citep{Cohen2003,FIFARS2016} that are particularly vulnerable to extreme heat. These factors leave those in urban areas in an increasingly dangerous position. In coming years, cities and their residents will need to adapt to these challenges.
 
 
-Incorporating more vegetation and water into urban areas can effectively mitigate extreme urban temperatures on local to micro scales \citep{Tsiros2010,Shashua-Bar2010a,Spangenberg2008,Coutts2012}. Shading and evapotranspiration are cited as the main drivers of these cooling effects \citep{Bowler2010}. The degree of cooling effects are variable however, and depend on factors such as vegetation density \citep{Hall2016,Bodnaruk2017}, street orientation and aspect ratio \citep{Thorsson2011,Ali-Toudert2006b}, and amounts of irrigation used \citep{Jenerette2011}. Trees in particular provide a strong benefit for HTC during the day, especially those with large, dense canopies that provide shade and are well irrigated to promote transpiration \citep{Coutts2015,Huang2008,Ylmaz2007,Shashua-Bar2000}. Water sensitive urban design (WSUD) presents an opportunity to capture and retain stormwater in urban areas using engineered and natural features (trees, vegetation, and substrate) to capture, filter, and store water as an additional urban water source \citep{Wong2009}. A more focused effort in using trees and WSUD for urban climate benefits can deliver improvements to human thermal comfort (HTC) \citep{Coutts2012}. 
+Incorporating more vegetation and water into urban areas can effectively mitigate extreme urban temperatures on local to micro scales \citep{Tsiros2010,Shashua-Bar2010a,Spangenberg2008,Coutts2012}. Shading and evapotranspiration are cited as the main drivers of these cooling effects \citep{Bowler2010}. The degree of cooling effects are variable however, and depend on factors such as vegetation density \citep{Hall2016,Bodnaruk2017}, street orientation and aspect ratio \citep{Thorsson2011,Ali-Toudert2006b}, and amounts of irrigation used \citep{Jenerette2011}. Trees in particular provide a strong benefit for HTC during the day, especially those with large, dense canopies that provide shade and are well irrigated to promote transpiration \citep{Coutts2015,Huang2008,Ylmaz2007,Shashua-Bar2000}, with possible additional side effects of strategically placed trees of reduced energy usage (and associated emissions and anthropogenic heat) for cooling \citep{Donovan2009,Rosenfeld1996,Simpson1993}. Water sensitive urban design (WSUD) presents an opportunity to capture and retain stormwater in urban areas using engineered and natural features (trees, vegetation, and substrate) to capture, filter, and store water as an additional urban water source \citep{Wong2009}. A more focused effort in using trees and WSUD for urban climate benefits can deliver improvements to human thermal comfort (HTC) \citep{Coutts2012}. 
+
 
 
 While the benefits of urban vegetation and water are well understood in the climate community, uptake and application of knowledge in urban planning is lacking. \cite{Bowler2010} suggests that the current research does not demonstrate exactly how urban greening should be implemented in terms of abundance, type, and distribution.  A suitable modelling tool is needed to provide solid quantitative assessments of the effectiveness of trees and water in terms of heat mitigation, across contrasting micro-scale urban environments, and therefore provide guidance on how to most effectively use trees and WSUD for improved HTC. 
@@ -195,7 +196,7 @@ A suitable modelling tool for these assessments needs to resolve detailed temper
 
 What is needed is an approach that fits in between these two levels of complexity, a new innovative method to balance detail, accuracy, and complexity with efficiency and usability, while also being able to consider a wide variety of vegetation types and arrangements. As a point of comparison with other models at this scale, VTUF-3D calculates a 30 day simulation using hourly timesteps of a 200x200m area with 5m resolution on a standard desktop computer in an hour or two (at least an order of magnitude less than required by a CFD based model). It also needs to balance this complexity against usability to create a model that can be widely used to consider a large variety of questions about HTC impacts of urban vegetation in support of urban planning decisions and guidelines. 
 
-This study presents the development of a new model: VTUF-3D (Vegetated Temperatures of Urban Facets in 3D v1.0) that aims to provide a model capable of assessing the benefits of vegetation (including trees) and WSUD on urban canopy layer air temperatures and HTC. VTUF-3D is developed from the TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} that prior to this study, lacked vegetation and water components. The TUF-3D model was coupled with the MAESPA model (an amalgamation of the MAESTRO (not an acronym) and SPA (Soil-plant-atmosphere) models)  \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement, accounting for vegetation structural and physiological processes. This study also aims to evaluate the model, in terms of the surface energy balance, for an urban site in Melbourne, Australia. 
+This study presents the development of a new model: VTUF-3D (Vegetated Temperatures of Urban Facets in 3D v1.0) that aims to provide a model capable of assessing the benefits of vegetation (including trees) and WSUD on urban canopy layer air temperatures and HTC. VTUF-3D is developed from the TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} that prior to this study, lacked vegetation and water components. The TUF-3D model was coupled with the MAESPA model (an amalgamation of the MAESTRO (not an acronym) and SPA (Soil-plant-atmosphere) models)  \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement, accounting for vegetation structural and physiological processes. This study also aims to evaluate the model, in terms of the surface energy balance, for an urban site in Melbourne, Australia, as well as against micro-climate observations of $T_{mrt}$ and UTCI recorded across two streets (with differing canopy cover) in the City of Melbourne. 
 
 VTUF-3D has the capacity to address the research gap identified by \cite{Bowler2010} of how vegetation (especially trees) should be best implemented in terms of abundance, type and distribution, as well as the potential for accounting for water availability through WSUD. This can facilitate the integration of urban greening into the urban landscapes and inform planning decisions, with urban climate knowledge, about how to best utilise urban greening to maximise the thermal comfort impacts and meet the challenges of urban heat. VTUF-3D can help inform how to best to protect human health in light of all the concerning trends progressing in urban areas.
 
@@ -270,7 +271,7 @@ Q_{E} = Q_{E,et} + Q_{E,soil} + Q_{E,canopy} + Q_{E,evap}
 where each $Q_{E}$ value was previously converted in Equation (\ref{eq:mmtowm2}). With these additions, VTUF-3D is now able to account for $Q_{E}$ in energy balance partitioning, and thus determine the influence of water and vegetation evapotranspiration on temperature predictions in urban canyons.
 
 
-\subsubsection{Convective sensible heat fluxes and ground storage fluxes}\label{sec:convection} 
+\subsubsection{Sensible heat and ground storage fluxes}\label{sec:convection} 
 Convection in TUF-3D (and thus in VTUF-3D) is implemented as an adaptation of the facet-averaged approach of \cite{Masson2000}. Horizontal advective exchanges are not considered, which is considered to be a reasonable approach given the well-mixed nature of canopy layer air \citep{Krayenhoff2007}. A more accurate but computationally intensive approach could be undertaken using a computational fluid dynamics (CFD) method. However, forcing by the convection between facets is likely less important than the forcing of surface temperatures through the shaded and unshaded radiation distribution and its interactions of surface material properties \citep{Krayenhoff2007}. There is the possibility that the addition of vegetation to the model will increase the importance of interactions between neighbouring surfaces of varying temperatures and moistures. However, as will be seen in the model evaluation process (Section \ref{sec:Validation}), this simplified approach still delivers suitably accurate results without justifying more computationally intensive methods. Full details of calculations are described in \cite{Krayenhoff2007}.
 
 Using this convective scheme for sensible heat fluxes ($Q_{H}$), vegetation is accounted for differently by modifying the TUF-3D $Q_{H}$ calculations for grid squares with vegetation, using the $T_{sfc,veg}$ of the vegetation instead of the TUF-3D $T_{sfc}$ value in Equation (\ref{eq:qhveg})
@@ -291,10 +292,10 @@ Ground storage flux ($Q_{G}$) calculations of vegetated grid squares are modifie
 
 \subsection{Mean radiant temperature and Universal Thermal Climate Index calculations}\label{sec:tmrtutci}
 
-VTUF-3D provides output of incoming and outgoing shortwave and longwave radiation and $T_{sfc}$ for each facet (surface) at each timestep. Air temperature for the canyon, $T_{can}$ is also provided for each timestep. Using these and values of vapour pressure from the forcing data and wind speed at street level (calculated in Section \ref{sec:convection}), the values for $T_{mrt}$ (mean radiant temperature (\SI{}{\degreeCelsius})) and the human thermal comfort index UTCI are calculated for each surface. User defined options in the model are available to either calculate $L\downarrow$, using the clear sky formula of \cite{Prata1996}, or use forcing values. Based on this, different options can be used to calculate the following equations.
+VTUF-3D provides output of incoming and outgoing shortwave and longwave radiation and $T_{sfc}$ for each facet (surface) at each timestep. Air temperature for the canyon, $T_{can}$, is also provided for each timestep. Using these and values of vapour pressure from the forcing data and wind speed at street level, the values for mean radiant temperature ($T_{mrt}$) and the human thermal comfort index UTCI are calculated for each surface. User defined options in the model are available to either calculate $L\downarrow$, using the clear sky formula of \cite{Prata1996}, or use forcing values. Based on this, different options can be used to calculate the following equations.
 
 
-Calculations of mean radiant temperature $T_{mrt}$ uses a two step procedure. First, globe temperature ($T_{g}$) is calculated by an iterative relaxation solution, using a formulation of \cite{Liljegren2008} in  
+Calculations of $T_{mrt}$ (\SI{}{\degreeCelsius}) uses a two step procedure. First, globe temperature ($T_{g}$) is calculated by an iterative relaxation solution, using a formulation of \cite{Liljegren2008} in  
 
 \begin{equation}\label{eq:tg2}
 \begin{split}
@@ -312,23 +313,15 @@ $\epsilon_{g}$, the globe emissivity (of value 0.95),
 $h$, the convective heat transfer coefficient (W m$^{-2}$ K$^{-1}$) (see Equation (\ref{eq:h})), 
 $T_{a}$, the dry bulb air temperature (K) (using $T_{can}$), 
 $T_{sfc}$, the surface temperature (K), 
-S, the horizontal solar irradiance (W m$^{-2}$) calculated from the total of absorbed and reflected shortwave (resulting from calculations in Section \ref{sec:radiativetransfer}), 
+S, the horizontal solar irradiance (W m$^{-2}$) calculated from the total of absorbed and reflected shortwave, 
 $\theta$, the solar zenith angle, 
 $\alpha_{sfc}$, the surface albedo (of value 0.15),  
 $\alpha_{g}$, the globe albedo (of value 0.05), and 
-$f_{dir}$, the fraction of the total horizontal solar irradiance, $S$, due to the direct
-beam of the sun. 
+$f_{dir}$, the fraction of the total horizontal solar irradiance, 
+$S$, due to the direct beam of the sun. 
 
 
-%The third term on the RHS is correct and follows Liljegran et al., 2008 and relates to the direct irradiance on the projected area of the globe. Please see below. 
-%
-%Regarding exposure of a person compared to a surface, yes there is likely to be some differences, however Tg and Tmrt therefore are calculated per grid square, so there is variance across the domain. The assumption is that the radiation leaving a surface (e.g. a wall) reaches the person (sphere) located at each grid point.
-%
-%The use of a sphere is a simplification of the calculation of Tmrt on the human body and so the weighting factors usually applied for the calculation of Tmrt for the human body are instead those for a sphere.
-%
-%From Liljegren, J. C., Carhart, R. A., Lawday, P., Tschopp, S., Sharp, R., 2008. Modeling the wet bulb globe temperature using standard meteorological measurements. Journal of Occupational and Environmental Hygiene 5 (10), 645–655.
-%
-%“The second and third terms on the right represent the energy gained by the globe due to diffuse and direct solar irradiance. It is important to note that these act on different areas: the diffuse irradiance is incident on the upper hemisphere of the globe, whereas the direct irradiance is incident on the projected area of the globe normal to the solar zenith angle, which is the crosssectional area of the globe, πD2/4.”
+
 
 The convective heat transfer coefficient, $h$, as used in Equation (\ref{eq:tg2}), is calculated using 
 
@@ -343,7 +336,7 @@ $k$, the thermal conductivity of the fluid (i.e. air) (W m$^{-1}$K$^{-1}$) \cite
 
 
 
-Depending on user defined scenario model configuration settings, a number of terms in Equation (\ref{eq:tg2}) can use internally calculated values. $\sigma (\epsilon_{a} T_{a}^{4} + \epsilon_{sfc} T_{sfc}^{4} )$ can be replaced with $L\downarrow + L\uparrow$, the result of reflections of $L \downarrow_{i,sky}$ calculated in Section \ref{sec:radiativetransfer}). $(1-f_{dir})S$ can be replaced with $K \downarrow_{dif}$, and $f_{dir}S/ \cos(\theta)$ with $K \downarrow_{dir}$. Also, for vegetated grid squares, the terms for $L\downarrow$ and $L\uparrow$ can be replaced with calculations of $L\downarrow$ and $L\uparrow$ from $\epsilon \sigma T^{4}$ where $T_{s,1}$, soil surface temperature (K), is used as the temperature term for the $L\uparrow$ calculation while leaf temperature (from Section \ref{sec:calcleaftemp}) is used for $L\downarrow$. 
+Depending on user defined scenario model configuration settings, a number of terms in Equation (\ref{eq:tg2}) can use internally calculated values. $\sigma (\epsilon_{a} T_{a}^{4} + \epsilon_{sfc} T_{sfc}^{4} )$ can be replaced with $L\downarrow + L\uparrow$, the result of reflections of $L \downarrow_{i,sky}$. $(1-f_{dir})S$ can be replaced with $K \downarrow_{dif}$, and $f_{dir}S/ \cos(\theta)$ with $K \downarrow_{dir}$. Also, for vegetated grid squares, the terms for $L\downarrow$ and $L\uparrow$ can be replaced with calculations of $L\downarrow$ and $L\uparrow$ from $\epsilon \sigma T^{4}$ where $T_{s,1}$, soil surface temperature (K), is used as the temperature term for the $L\uparrow$ calculation while leaf temperature is used for $L\downarrow$. 
 
 Using $T_{g}$, calculated in Equation (\ref{eq:tg2}), the second step in calculating $T_{mrt}$ proceeds in a formulation of \cite{Kantor2011} 
 \begin{equation}\label{eq:tmrtbucket}
@@ -360,12 +353,12 @@ Using $T_{g}$, calculated in Equation (\ref{eq:tg2}), the second step in calcula
 
 
 
-Finally, the Universal Thermal Climate Index (UTCI) for each surface is calculated using the \cite{Brode2009u} UTCI formula, generating UTCI values for each surface, allowing human thermal comfort to be examined in detail across a modelled domain. The calculation uses modelled outputs of air temperature, wind speed (using model calculated wind speed at road level), relative humidity (from the forcing data), and $T_{mrt}$ (calculated above). VTUF-3D does not currently calculate a canopy level relative humidity. This is a current limitation and a future enhancement for the model. But as will be shown in the evaluation of VTUF-3D focussing on urban canopy layer air temperature, $T_{mrt}$, and UTCI predictions (Section \ref{sec:CoMValidations}) and in the energy flux evaluation in Section \ref{sec:evalresults}, the model still performs well despite this limitation. 
+Finally, the Universal Thermal Climate Index (UTCI) (\SI{}{\degreeCelsius}) for each surface is calculated using the \cite{Brode2009u} UTCI formula, generating UTCI values for each surface, allowing human thermal comfort to be examined in detail across a modelled domain. The calculation uses modelled outputs of air temperature, wind speed (using model calculated wind speed at road level), relative humidity (from the forcing data), and $T_{mrt}$ (calculated above). VTUF-3D does not currently calculate a canopy level relative humidity. This is a current limitation and a future enhancement for the model. But as will be shown in the evaluation of VTUF-3D focussing on urban canopy layer air temperature, $T_{mrt}$, and UTCI predictions (Section \ref{sec:CoMValidations}) and in the energy flux evaluation (Section \ref{sec:PrestonValidation}), the model still performs well despite this limitation. 
 
 %This UTCI formula was designed to provide human thermal comfort assessments using thermal environment parameters with fixed values (incorporated into the formula) for metabolic rates and clothing levels \citep{Brode2012a}. While future development is needed to provide wider flexibility to vary metabolic rates and clothing levels, existing versions of this formula were developed to embody equivalent human physiological responses to differing thermal parameters \citep{Havenith2012,Fiala2012}.
 
 \subsection{New VTUF-3D shading logic integrating vegetation shading}\label{sec:integration}
-In order to understand the changes made to create VTUF-3D, an overview of the TUF-3D logic is necessary. Two dimensional (x,y) locations of building locations are configured along with their heights. TUF-3D uses forcing data of temperature, humidity, incoming radiation levels, and wind speed and direction from a location at specified z height (above the canopy). Wind is used in roughness calculations but not used to resolve movements around the buildings (as a CFD based model would). This simplification is a design decision trade-off to reduce the complexity of the model and the intensity of computations, while still producing robust enough results (see Section \ref{sec:convection}).
+In order to understand the changes made to create VTUF-3D, an overview of the TUF-3D logic is necessary. Two dimensional (x,y) locations of building locations are configured along with their heights. TUF-3D uses forcing data of temperature, humidity, incoming radiation levels, and wind speed and direction from a location at specified z height (above the canopy). Wind is used in roughness calculations but not used to resolve movements around the buildings (as a CFD based model would). This simplification is a design decision trade-off to reduce the complexity of the model and the intensity of computations, while still producing robust enough results.
 
 
 
@@ -394,8 +387,6 @@ The domain initialisation ray tracing routines of TUF-3D have not been modified.
 
 
 
-%During the model initialisation stage, ray tracing is done (Figure \ref{fig:initray}a) between all surfaces to determine which surfaces are visible to each other. This step reduces the number of radiative interactions of surfaces that will need to be considered throughout the simulation run. Then, as the model runs a simulation, at each timestep, TUF-3D runs a shading routine (Figure \ref{fig:shading}b). In it, the model iterates through each surface in the domain (roads and building walls and roofs) and ray-traces four times from the centre of each quarter of the surface towards the sun. Each surface keeps track of the level of illumination, the shade coefficient for that surface, at each timestep. If the ray passes to the top of the domain without being obstructed (i.e. surface 4) then 0.25 is added to the shade coefficient for that surface. If the ray is obstructed before reaching the top of the domain (i.e. surface 3), then nothing is added. Each surface has potential values of 0, 0.25, 0.5, 0.75 and 1.0. During the later energy balance step, an appropriate amount of incoming radiation is allocated to this surface based on this coefficient.
-
 \subsubsection{Integrating vegetation shading and modified ray tracing logic in VTUF-3D}\label{sec:Representationofvegetation}
 
 After model improvements to VTUF-3D were made, a similar parallel logic was used to represent the vegetation in the domain. These vegetation elements are ignored in the initial ray-tracing (Figure \ref{fig:initray}a). This initial ray tracing is performed to optimise the modelling, to exclude any two surfaces which will never be visible to each other. However, depending on the density of the vegetation, a particular ray trace might not be completely obscured by vegetation so these cases will have to be evaluated during the simulation run.
@@ -404,13 +395,13 @@ At each timestep during the simulation, VTUF-3D now runs a modified shading rout
 
 To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, reverse ray tracing is done for those beams (Figure \ref{fig:modshadingreverse}d). For surfaces 5 and 6 in Figure \ref{fig:modshadingreverse}d, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation. The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the final ground or building surface.
 
-Each item of vegetation in the domain is modelled offline and this data is made available for the main simulation run. In order to account for the effects of inter-tree shading or shading by buildings during the main simulation run, these offline simulations are run twice using varied amounts of incoming shortwave. The first variation uses 100\% incoming solar radiation to account for when the vegetation is in full sun. The second variation uses only the diffuse component of the incoming solar radiation for when the vegetation is shaded by obstructions. The proper variation for each item of vegetation is chosen automatically (based on its current sunlit percentage) during the model run. As the illumination levels vary in each location in an urban canyon across the diurnal cycle, these variations allow the differing vegetation responses (varying levels of photosynthesis due to lower levels of PAR, changes in surface temperatures, and varying vegetation evapotranspiration due to differences in stomatal conductance and vapour pressure deficits) to be captured. However, these variations will not be able to exactly capture every variation, such as a reduction in diffuse shortwave due to a nearby building. Examples of the forcing data required for these offline variations are described in the Pr04Val evaluation (Section \ref{sec:modelsetup}).
+Each item of vegetation in the domain is modelled offline and this data is made available for the main simulation run. In order to account for the effects of inter-tree shading or shading by buildings during the main simulation run, these offline simulations are run twice using varied amounts of incoming shortwave. The first variation uses 100\% incoming solar radiation to account for when the vegetation is in full sun. The second variation uses only the diffuse component of the incoming solar radiation for when the vegetation is shaded by obstructions. The proper variation for each item of vegetation is chosen automatically (based on its current sunlit percentage) during the model run. As the illumination levels vary in each location in an urban canyon across the diurnal cycle, these variations allow the differing vegetation responses (varying levels of photosynthesis due to lower levels of PAR, changes in surface temperatures, and varying vegetation evapotranspiration due to differences in stomatal conductance and vapour pressure deficits) to be captured. However, these variations will not be able to exactly capture every variation, such as a reduction in diffuse shortwave due to a nearby building. Examples of the forcing data required for these offline variations are described in the Pr04Val evaluation set-up (Section \ref{sec:modelsetup}).
 
-\section{Model evaluation}
-\subsection{Energy flux predictions evaluation}
+\section{Model evaluation}\label{sec:Validation}
+\subsection{Energy flux predictions evaluation}\label{sec:PrestonValidation}
 Evaluations of VTUF-3D need to be performed to ensure that this new model is making accurate predictions. As an energy balance model, modelled output comparisons to observations of energy fluxes and temperatures are considered fundamental evaluations \citep{Masson2002a}. With the addition of vegetation modelling, it is important that those aspects are also properly evaluated. 
 
-\subsubsection{Evaluation data}\label{sec:Validation}
+\subsubsection{Evaluation data}
 
 An evaluation was performed based on flux tower observations recorded in the suburb of Preston, in northern Melbourne, Australia \citep{Coutts2007}. Preston is a homogeneous, low to medium density area and characterised as LCZ6B (open low-rise) \citep{Stewart2012b}. A 40 meter flux tower recorded observations during 2003 and 2004 \citep{Coutts2007}, providing observed values of $Q^{*}$, $Q_{H}$, $Q_{E}$, air temperature, humidity, wind speed and direction. $Q_{G}$ was calculated as a residual of the surface energy balance. Estimates of the anthropogenic heat flux ($Q_{F}$) were made using an inventory approach, though $Q_{F}$ is included implicitly in the observations and contributes to the observed sensible heat fluxes. The use of this data set allows an evaluation of surface energy balances against modelled predictions. This data set was also used as the forcing and comparison data set for Phase 2 and 4 of the International Urban Energy Balance Models Comparison Project \citep{Grimmond2011,Best2012}. Phase 2 of this comparison project evaluated the performance of 32 urban land surface modelling schemes, forced by and compared to these observations, using a consistent methodology. Phase 4 re-evaluated many of these modelling schemes for their performance across a variety of seasonal cycles.
 
@@ -570,7 +561,7 @@ Using the RMSE and MBE values for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$ from Phase 4 
 
 This project uses an innovative method, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model in this manner. This method was anticipated to bring performance improvements over the previous version of the model that did not consider vegetation. The results suggest that this is the case, shown in the the results of the Pr04NoVeg no vegetation evaluation scenario. In comparisons with other urban models, VTUF-3D has shown comparable performance to these other urban models (while delivering micro-scaled results). In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to urban vegetation and water would not be possible. 
 
-Despite these improvements to the modelling tool, the fluxes of $Q_{E}$ show some divergences from the observations. This was anticipated as there are three current limitations of VTUF-3D that can account for low $Q_{E}$ levels, and need addressing in future versions of the model. The first is not accounting for precipitation on impervious surfaces. Many spikes of $Q_{E}$ fluxes are seen in the observations shortly after rainfall. \cite{Demuzere2014} found evaporation from impervious surfaces in urban areas after rainfall can contribute to an approximately 10\% increase of $Q_{E}$ over a two month period, while \cite{Wouters2013} found increases of 45 W m$^{-2}$ in $Q_{E}$ for up to 12 hours of daylight following rainfall. Until this portion of precipitation received is accounted for in the model, care should be taken when modelling periods which contain precipitation.
+Despite these improvements to the modelling tool, the fluxes of $Q_{E}$ show some divergences from the observations. This was anticipated as there are three current limitations of VTUF-3D that can account for low $Q_{E}$ levels, and need addressing in future versions of the model. The first is not accounting for precipitation on impervious surfaces. Many spikes of $Q_{E}$ fluxes are seen in the observations shortly after rainfall. \cite{Demuzere2014} found evaporation from impervious surfaces in urban areas after rainfall can contribute to an approximately 10\% increase of $Q_{E}$ over a two month period, while \cite{Wouters2013} found increases of 45 W m$^{-2}$ in $Q_{E}$ for up to 12 hours of daylight following rainfall. In other parameters, there is evidence that wet impervious surfaces can have some other short term cooling impacts. \cite{Hendel2016} observed that hourly watering of urban pavement during heat wave conditions could deliver maximum air temperature reductions (at 1.5m above ground level) of 0.79 \SI{}{\degreeCelsius} as well as $T_{mrt}$ and UTCI reductions of 1.67\SI{}{\degreeCelsius} and 1.03\SI{}{\degreeCelsius}. While this might indicate an upper bound to the impact of wet pavement, until this portion of precipitation received is accounted for in the model, care should be taken when modelling periods which contain precipitation.
 
 The second limitation is not accounting for irrigation. While Melbourne was under Stage 2 water restrictions during the observation/modelling period \citep{MelbourneWater2016a}, there would have been some amount of irrigation occurring to contribute to greater observed $Q_{E}$ fluxes than modelled. Estimates of household irrigation during February 2004 are of frequencies of 2.8 times a week (3.1 for only the homes which irrigate) with average irrigation flows of 16.3slm and average durations of 46 minutes per irrigation event \citep{Roberts2005}. This is an important limitation which needs addressing as quantifying the benefits of irrigation as part of WSUD is an intended use of this model. 
 
@@ -588,7 +579,7 @@ Another consideration is that the under-prediction of $Q_{E}$ is likely contribu
 
 \subsection{Spatial and temporal mean radiant temperature and human thermal comfort index evaluation}\label{sec:CoMValidations}
 
-While evaluating against the Preston flux observations indicates that VTUF-3D performs well in partitioning the basic energy fluxes, there are a number of other aspects that need to be validated to allow confidence in the model's accuracy, especially given the intended application of the model to assess the impacts of urban greening on micro-climates and HTC. Further evaluation is needed to ensure that the model correctly captures the spatial variations of $T_{mrt}$ driven by these fluxes. These values are also driven by varied shading effects across the urban canyon. Both values are highly influential on thermal comfort. The evaluation will be performed by comparing spatial values of $T_{mrt}$ and UTCI to observed values. Evaluations of spatial air temperature ($T_{a}$) will not be possible as air temperature is only predicted as a single canyon-wide value and not spatially.
+While evaluating against the Preston flux observations indicates that VTUF-3D performs well in partitioning the basic energy fluxes, there are a number of other aspects that need to be evaluated. Given the intended application of the model to assess the impacts of urban greening on HTC at a micro-climate scale, a demonstration of accurate predictions of $T_{mrt}$ and HTC indices, both highly influential on thermal comfort, and capturing the effects of varied shading across and urban canyon, is an important step. Observational studies have shown that street orientation, tree placement on the street, and canopy cover amounts can cause large micro-climate variations in HTC and of $T_{mrt}$ \citep{Sanusi2016,Oliveira2011,Ali-Toudert2007}. The evaluation will be performed by comparing predicted spatial values of $T_{mrt}$ and UTCI to observed values. Note, evaluations of spatial air temperature ($T_{a}$) will not be possible as air temperature is only predicted as a single canyon-wide value and not spatially.
 
 \subsubsection{George St. and Gipps St. dataset overview}
 This set of evaluations was undertaken using observations from George St. and Gipps St. in the City of Melbourne \citep{Coutts2015}. These observations were taken at a number of observation stations, recording air temperature, wind speed, humidity, and incoming short wave radiation, located along the two streets. The purpose of this study was to observe and quantify the effects of street trees on HTC and recorded observations in streets with varied canopy cover. Figure \ref{fig:GeorgeGippsSt2} shows the two streets used in this evaluation. 
@@ -813,6 +804,18 @@ Two contrasting street canyons with varying amounts of canopy cover were used to
 VTUF-3D is a unique model involving an innovative tiling approach that accounts for the detailed physiological processes of vegetation. The model incorporates a templated scalable configuration system, used to represent specific types of vegetation, allowing any variety and mix of vegetation to be added to a modelled domain. Also, differential shading functionality allows impacts of urban geometry and inter-tree shading on vegetation anywhere in an urban canyon to be properly modelled. Finally, the addition of mean radiant temperature and UTCI output for all surfaces allows detailed analysis of the impact of vegetation on these important parameters influencing HTC in these areas.
 
 An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to model and study in detail the impacts of urban greening on HTC and recommendations and guidelines on how best to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to give the maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and understanding how current urban design responds to extremes.
+
+%Future work with VTUF-3D to 
+%
+%This work will initially be conducted by
+%
+%
+%Additional work is under way 
+%
+%Initial future work is to do analysis work, run scenarios. Also add a GUI.
+% will model for the CRC
+%
+
 
 With VTUF-3D's micro-climate resolution, urban areas can be studied metre by metre and proper mitigation strategies designed for every section of the urban canyon, allowing effort to be focused on areas with the greatest need. VTUF-3D is sufficiently scaled to resolve human level interactions with their surroundings and provide variables to calculate HTC (such as T$_{mrt}$). The built in output of T$_{mrt}$ and UTCI allows examination of these values without requiring addition steps. Finally, with the ability to insert any type of vegetation using physiological and physical vegetation templates, VTUF-3D is applicable to an unlimited number of scenarios and modelling questions. This new model will allow research into a wide variety of urban morphologies, quantifying the benefits of a wide variety of urban arrangements and allow planning for future changes and challenges in climate and urban design.
 
